# Edulearn

./: README.md
edulearn/: pyproject.toml
edulearn/courses/migrations/: 0005_alter_file_owner_alter_image_owner_alter_text_owner_and_more.py
edulearn/edulearn/: settings.py
